all Anchor tag is working, mobil versio is ready, lets do some media query

--- a/actual-jobs-niederosterreich.html
+++ b/actual-jobs-niederosterreich.html
@@ -56,7 +56,7 @@
                 <h2 id="aktiv-page-name">Aktuális munkák </h2>
             </div>
                 <ul id="menu-list" class="menu-list-visibility">
-                    <li><a href="../index.html">Főoldal</a></li>
+                    <li><a href="index.html">Főoldal</a></li>
                     <li>
                         <a id="provinz" href="#">Tartományok</a>
                         <ul class="provinz-list">
@@ -64,11 +64,11 @@
                             <li><a href="karnten.html">Kärnten</a></li>
                             <li><a href="niederosterreich.html">Niederösterreich</a></li>
                             <li><a href="oberosterreich.html">Oberösterreich</a></li>
-                            <li><a href="#">Salzburg</a></li>
-                            <li><a href="#">Steiermark</a></li>
-                            <li><a href="../tirol.html">Tirol</a></li>
-                            <li><a href="#">Vorarlberg</a></li>
-                            <li><a href="#">Wien</a></li>
+                            <li><a href="salzburg.html">Salzburg</a></li>
+                            <li><a href="steiermark.html">Steiermark</a></li>
+                            <li><a href="tirol.html">Tirol</a></li>
+                            <li><a href="vorarlberg.html">Vorarlberg</a></li>
+                            <li><a href="wien.html">Wien</a></li>
                         </ul>
                     </li>
                     <li><a id="sos" href="#">Szolgáltatók | Niederösterreich</a>
@@ -82,7 +82,7 @@
                     </ul>
                     </li>
                     <li><a href="actual-jobs-niederosterreich.html">Aktuális Munkák | Niederösterreich</a></li>
-                    <li><a href="../kapcsolat.html">Kapcsolat</a></li>
+                    <li><a href="kapcsolat.html">Kapcsolat</a></li>
                 </ul>
             </nav>
             <section id="main">
