--- a/actual_jobs-steiermark.html
+++ b/actual_jobs-steiermark.html
@@ -110,7 +110,7 @@
             href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Oswald:wght@300&display=swap"
             rel="stylesheet"
         />
-        <title>Magyarok Ausztriában | Niederösterreich | Aktuális Munka</title>
+        <title>Magyarok Ausztriában | Steiermark | Aktuális Munka</title>
     </head>
     <body>
         <div id="wrapper">
@@ -138,13 +138,13 @@
                             <li><a href="niederosterreich.html">Niederösterreich</a></li>
                             <li><a href="oberosterreich.html">Oberösterreich</a></li>
                             <li><a href="salzburg.html">Salzburg</a></li>
-                            <li><a href="#">Steiermark</a></li>
-                            <li><a href="../tirol.html">Tirol</a></li>
-                            <li><a href="#">Vorarlberg</a></li>
-                            <li><a href="#">Wien</a></li>
+                            <li><a href="steiermark.html">Steiermark</a></li>
+                            <li><a href="tirol.html">Tirol</a></li>
+                            <li><a href="vorarlberg.html">Vorarlberg</a></li>
+                            <li><a href="wien.html">Wien</a></li>
                         </ul>
                     </li>
-                    <li><a id="sos" href="#">Szolgáltatók | Niederösterreich</a>
+                    <li><a id="sos" href="#">Szolgáltatók | Steiermark</a>
                         <ul class="sos-list">
                           <li><a href="szolgaltatok_niederosterreich/autoszerelo.html">Autószerelők | Autómentők</a></li>
                           <li><a href="szolgaltatok_niederosterreich/fuvarozo.html">Háztól Házig fuvarozás | Költöztetés</a></li>
@@ -154,8 +154,8 @@
                           <li><a href="szolgaltatok_niederosterreich/orvosok.html">Orvosok</a></li>
                     </ul>
                     </li>
-                    <li><a href="actual_jobs-steiermark.html">Aktuális Munkák | Salzburg</a></li>
-                    <li><a href="../kapcsolat.html">Kapcsolat</a></li>
+                    <li><a href="actual_jobs-steiermark.html">Aktuális Munkák | Steiermark</a></li>
+                    <li><a href="kapcsolat.html">Kapcsolat</a></li>
                 </ul>
             </nav>
             <section id="main">
