--- a/burgerland.html
+++ b/burgerland.html
@@ -62,12 +62,12 @@
                             <li><a href="burgerland.html">Burgerland</a></li>
                             <li><a href="karnten.html">Kärnten</a></li>
                             <li><a href="niederosterreich.html">Niederösterreich</a></li>
-                            <li><a href="#">Oberösterreich</a></li>
-                            <li><a href="#">Salzburg</a></li>
-                            <li><a href="#">Steiermark</a></li>
+                            <li><a href="oberosterreich.html">Oberösterreich</a></li>
+                            <li><a href="salzburg.html">Salzburg</a></li>
+                            <li><a href="steiermark.html">Steiermark</a></li>
                             <li><a href="tirol.html">Tirol</a></li>
-                            <li><a href="#">Vorarlberg</a></li>
-                            <li><a href="#">Wien</a></li>
+                            <li><a href="vorarlberg.html">Vorarlberg</a></li>
+                            <li><a href="wien.html">Wien</a></li>
                         </ul>
                     </li>
                     <li><a id="sos" href="#">Szolgáltatók | Burgerland</a>
@@ -77,7 +77,7 @@
                         <li><a href="szolgaltatok_burgerland/konyvelo.html">Könyvelő | Adószakértő</a></li>
                         <li><a href="szolgaltatok_burgerland/szepsegapolas.html">Szépségápolás</a></li>
                         <li><a href="szolgaltatok_burgerland/ugyved.html">Ügyvédek</a></li>
-                        <li><a href="szolgaltatok_html_files/orvosok.html">Orvosok</a></li>
+                        <li><a href="szolgaltatok_burgerland/orvosok.html">Orvosok</a></li>
                     </ul>
                     </li>
                     <li><a href="actual_jobst-burgerland.html">Aktuális Munkák | Burgerland</a></li>
