--- a/steiermark.html
+++ b/steiermark.html
@@ -63,21 +63,21 @@
                             <li><a href="karnten.html">Kärnten</a></li>
                             <li><a href="niederosterreich.html">Niederösterreich</a></li>
                             <li><a href="oberosterreich.html">Oberösterreich</a></li>
-                            <li><a href="#">Salzburg</a></li>
-                            <li><a href="#">Steiermark</a></li>
+                            <li><a href="salzburg.html">Salzburg</a></li>
+                            <li><a href="steiermark.html">Steiermark</a></li>
                             <li><a href="tirol.html">Tirol</a></li>
-                            <li><a href="#">Vorarlberg</a></li>
-                            <li><a href="#">Wien</a></li>
+                            <li><a href="vorarlberg.html">Vorarlberg</a></li>
+                            <li><a href="wien.html">Wien</a></li>
                         </ul>
                     </li>
                     <li><a id="sos" href="#">Szolgáltatók | Steiermark</a>
                         <ul class="sos-list">
-                        <li><a href="szolgaltatok_oberosterreich/autoszerelo.html">Autószerelők | Autómentők</a></li>
-                        <li><a href="szolgaltatok_oberosterreich/fuvarozo.html">Háztól Házig fuvarozás | Költöztetés</a></li>
-                        <li><a href="szolgaltatok_oberosterreich/konyvelo.html">Könyvelő | Adószakértő</a></li>
-                        <li><a href="szolgaltatok_oberosterreich/szepsegapolas.html">Szépségápolás</a></li>
-                        <li><a href="szolgaltatok_oberosterreich/ugyved.html">Ügyvédek</a></li>
-                        <li><a href="szolgaltatok_oberosterreich/orvosok.html">Orvosok</a></li>
+                        <li><a href="szolgaltatok_steiermark/autoszerelo.html">Autószerelők | Autómentők</a></li>
+                        <li><a href="szolgaltatok_steiermark/fuvarozo.html">Háztól Házig fuvarozás | Költöztetés</a></li>
+                        <li><a href="szolgaltatok_steiermark/konyvelo.html">Könyvelő | Adószakértő</a></li>
+                        <li><a href="szolgaltatok_steiermark/szepsegapolas.html">Szépségápolás</a></li>
+                        <li><a href="szolgaltatok_steiermark/ugyved.html">Ügyvédek</a></li>
+                        <li><a href="szolgaltatok_steiermark/orvosok.html">Orvosok</a></li>
                     </ul>
                     </li>
                     <li><a href="actual_jobs-steiermark.html">Aktuális Munkák | Steiermark</a></li>
