--- a/actual_jobs-karnten.html
+++ b/actual_jobs-karnten.html
@@ -64,14 +64,14 @@
                             <li><a href="karnten.html">Kärnten</a></li>
                             <li><a href="niederosterreich.html">Niederösterreich</a></li>
                             <li><a href="oberosterreich.html">Oberösterreich</a></li>
-                            <li><a href="#">Salzburg</a></li>
-                            <li><a href="#">Steiermark</a></li>
-                            <li><a href="../tirol.html">Tirol</a></li>
-                            <li><a href="#">Vorarlberg</a></li>
-                            <li><a href="#">Wien</a></li>
+                            <li><a href="salzburg.html">Salzburg</a></li>
+                            <li><a href="steiermark.html">Steiermark</a></li>
+                            <li><a href="tirol.html">Tirol</a></li>
+                            <li><a href="vorarlberg.html">Vorarlberg</a></li>
+                            <li><a href="wien.html">Wien</a></li>
                         </ul>
                     </li>
-                    <li><a id="sos" href="#">Szolgáltatók</a>
+                    <li><a id="sos" href="#">Szolgáltatók | Kärnten</a>
                         <ul class="sos-list">
                             <li><a href="szolgaltatok_karnten/autoszerelo.html">Autószerelők | Autómentők</a></li>
                             <li><a href="szolgaltatok_karnten/fuvarozo.html">Háztól Házig fuvarozás | Költöztetés</a></li>
@@ -81,8 +81,8 @@
                             <li><a href="szolgaltatok_karnten/orvosok.html">Orvosok</a></li>
                     </ul>
                     </li>
-                    <li><a href="#">Aktuális Munkák</a></li>
-                    <li><a href="../kapcsolat.html">Kapcsolat</a></li>
+                    <li><a href="actual_jobs-karnten.html">Aktuális Munkák</a></li>
+                    <li><a href="kapcsolat.html">Kapcsolat</a></li>
                 </ul>
             </nav>
             <section id="main">
