--- a/actual_jobst-vorarlberg.html
+++ b/actual_jobst-vorarlberg.html
@@ -110,7 +110,7 @@
             href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Oswald:wght@300&display=swap"
             rel="stylesheet"
         />
-        <title>Magyarok Ausztriában | Salzburg | Aktuális Munka</title>
+        <title>Magyarok Ausztriában | Vorarlberg | Aktuális Munka</title>
     </head>
     <body>
         <div id="wrapper">
@@ -144,17 +144,17 @@
                             <li><a href="wien.html">Wien</a></li>
                         </ul>
                     </li>
-                    <li><a id="sos" href="#">Szolgáltatók | Salzburg</a>
+                    <li><a id="sos" href="#">Szolgáltatók | Vorarlberg</a>
                         <ul class="sos-list">
-                          <li><a href="szolgaltatok_salzburg/autoszerelo.html">Autószerelők | Autómentők</a></li>
-                          <li><a href="szolgaltatok_salzburg/fuvarozo.html">Háztól Házig fuvarozás | Költöztetés</a></li>
-                          <li><a href="szolgaltatok_salzburg/konyvelo.html">Könyvelő | Adószakértő</a></li>
-                          <li><a href="szolgaltatok_salzburg/szepsegapolas.html">Szépségápolás</a></li>
-                          <li><a href="szolgaltatok_salzburg/ugyved.html">Ügyvédek</a></li>
-                          <li><a href="szolgaltatok_salzburg/orvosok.html">Orvosok</a></li>
+                          <li><a href="szolgaltatok_vorarlberg/autoszerelo.html">Autószerelők | Autómentők</a></li>
+                          <li><a href="szolgaltatok_vorarlberg/fuvarozo.html">Háztól Házig fuvarozás | Költöztetés</a></li>
+                          <li><a href="szolgaltatok_vorarlberg/konyvelo.html">Könyvelő | Adószakértő</a></li>
+                          <li><a href="szolgaltatok_vorarlberg/szepsegapolas.html">Szépségápolás</a></li>
+                          <li><a href="szolgaltatok_vorarlberg/ugyved.html">Ügyvédek</a></li>
+                          <li><a href="szolgaltatok_vorarlberg/orvosok.html">Orvosok</a></li>
                     </ul>
                     </li>
-                    <li><a href="actual_jobs_salzburg.html">Aktuális Munkák | Salzburg</a></li>
+                    <li><a href="actual_jobst-vorarlberg.html">Aktuális Munkák | Vorarlberg</a></li>
                     <li><a href="kapcsolat.html">Kapcsolat</a></li>
                 </ul>
             </nav>
