--- a/salzburg.html
+++ b/salzburg.html
@@ -63,24 +63,24 @@
                             <li><a href="karnten.html">Kärnten</a></li>
                             <li><a href="niederosterreich.html">Niederösterreich</a></li>
                             <li><a href="oberosterreich.html">Oberösterreich</a></li>
-                            <li><a href="#">Salzburg</a></li>
-                            <li><a href="#">Steiermark</a></li>
+                            <li><a href="salzburg.html">Salzburg</a></li>
+                            <li><a href="steiermark.html">Steiermark</a></li>
                             <li><a href="tirol.html">Tirol</a></li>
-                            <li><a href="#">Vorarlberg</a></li>
-                            <li><a href="#">Wien</a></li>
+                            <li><a href="vorarlberg.html">Vorarlberg</a></li>
+                            <li><a href="wien.html">Wien</a></li>
                         </ul>
                     </li>
                     <li><a id="sos" href="#">Szolgáltatók | Salzburg</a>
                         <ul class="sos-list">
-                        <li><a href="szolgaltatok_oberosterreich/autoszerelo.html">Autószerelők | Autómentők</a></li>
-                        <li><a href="szolgaltatok_oberosterreich/fuvarozo.html">Háztól Házig fuvarozás | Költöztetés</a></li>
-                        <li><a href="szolgaltatok_oberosterreich/konyvelo.html">Könyvelő | Adószakértő</a></li>
-                        <li><a href="szolgaltatok_oberosterreich/szepsegapolas.html">Szépségápolás</a></li>
-                        <li><a href="szolgaltatok_oberosterreich/ugyved.html">Ügyvédek</a></li>
-                        <li><a href="szolgaltatok_oberosterreich/orvosok.html">Orvosok</a></li>
+                        <li><a href="szolgaltatok_salzburg/autoszerelo.html">Autószerelők | Autómentők</a></li>
+                        <li><a href="szolgaltatok_salzburg/fuvarozo.html">Háztól Házig fuvarozás | Költöztetés</a></li>
+                        <li><a href="szolgaltatok_salzburg/konyvelo.html">Könyvelő | Adószakértő</a></li>
+                        <li><a href="szolgaltatok_salzburg/szepsegapolas.html">Szépségápolás</a></li>
+                        <li><a href="szolgaltatok_salzburg/ugyved.html">Ügyvédek</a></li>
+                        <li><a href="szolgaltatok_salzburg/orvosok.html">Orvosok</a></li>
                     </ul>
                     </li>
-                    <li><a href="actual_jobs">Aktuális Munkák | Salzburg</a></li>
+                    <li><a href="actual_jobs_salzburg.html">Aktuális Munkák | Salzburg</a></li>
                     <li><a href="kapcsolat.html">Kapcsolat</a></li>
                 </ul>
                 <figure>
