--- a/szolgaltatok_burgerland/fuvarozo.html
+++ b/szolgaltatok_burgerland/fuvarozo.html
@@ -61,14 +61,14 @@
                         <a id="provinz" href="#">Tartományok</a>
                         <ul class="provinz-list">
                             <li><a href="../burgerland.html">Burgerland</a></li>
-                            <li><a href="#">Kärnten</a></li>
-                            <li><a href="#">Niederösterreich</a></li>
-                            <li><a href="#">Oberösterreich</a></li>
-                            <li><a href="#">Salzburg</a></li>
-                            <li><a href="#">Steiermark</a></li>
+                            <li><a href="../karnten.html">Kärnten</a></li>
+                            <li><a href="../niederosterreich.html">Niederösterreich</a></li>
+                            <li><a href="../oberosterreich.html">Oberösterreich</a></li>
+                            <li><a href="../salzburg.html">Salzburg</a></li>
+                            <li><a href="../steiermark.html">Steiermark</a></li>
                             <li><a href="../tirol.html">Tirol</a></li>
-                            <li><a href="#">Vorarlberg</a></li>
-                            <li><a href="#">Wien</a></li>
+                            <li><a href="../vorarlberg.html">Vorarlberg</a></li>
+                            <li><a href="../wien.html">Wien</a></li>
                         </ul>
                     </li>
                     <li><a id="sos" href="#">Szolgáltatók | Burgerland</a>
@@ -81,7 +81,7 @@
                         <li><a href="orvosok.html">Orvosok</a></li>
                     </ul>
                     </li>
-                    <li><a href="../actual_jobs-tirol.html">Aktuális Munkák | Burgerland</a></li>
+                    <li><a href="../actual_jobst-burgerland.html">Aktuális Munkák | Burgerland</a></li>
                     <li><a href="../kapcsolat.html">Kapcsolat</a></li>
                 </ul>
             </nav>
