--- a/szolgaltatok_vorarlberg/autoszerelo.html
+++ b/szolgaltatok_vorarlberg/autoszerelo.html
@@ -64,11 +64,11 @@
                             <li><a href="../karnten.html">Kärnten</a></li>
                             <li><a href="../niederosterreich.html">Niederösterreich</a></li>
                             <li><a href="../oberosterreich.html">Oberösterreich</a></li>
-                            <li><a href="#">Salzburg</a></li>
-                            <li><a href="#">Steiermark</a></li>
+                            <li><a href="../salzburg.html">Salzburg</a></li>
+                            <li><a href="../steiermark.html">Steiermark</a></li>
                             <li><a href="../tirol.html">Tirol</a></li>
-                            <li><a href="#">Vorarlberg</a></li>
-                            <li><a href="#">Wien</a></li>
+                            <li><a href="../vorarlberg.html">Vorarlberg</a></li>
+                            <li><a href="../wien.html">Wien</a></li>
                         </ul>
                     </li>
                     <li><a id="sos" href="#">Szolgáltatók | Vorarlberg</a>
@@ -81,7 +81,7 @@
                         <li><a href="orvosok.html">Orvosok</a></li>
                     </ul>
                     </li>
-                    <li><a href="../actual_jobs-steiermark.html">Aktuális Munkák | Vorarlberg</a></li>
+                    <li><a href="../actual_jobst-vorarlberg.html">Aktuális Munkák | Vorarlberg</a></li>
                     <li><a href="../kapcsolat.html">Kapcsolat</a></li>
                 </ul>
             </nav>
