--- a/szolgaltatok_wien/autoszerelo.html
+++ b/szolgaltatok_wien/autoszerelo.html
@@ -37,7 +37,7 @@
             href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Oswald:wght@300&display=swap"
             rel="stylesheet"
         />
-        <title>Magyarok Ausztriában | Vorarlberg | Szolgáltatók</title>
+        <title>Magyarok Ausztriában | Wien | Szolgáltatók</title>
     </head>
     <body>
         <div id="wrapper">
@@ -64,14 +64,14 @@
                             <li><a href="../karnten.html">Kärnten</a></li>
                             <li><a href="../niederosterreich.html">Niederösterreich</a></li>
                             <li><a href="../oberosterreich.html">Oberösterreich</a></li>
-                            <li><a href="#">Salzburg</a></li>
-                            <li><a href="#">Steiermark</a></li>
+                            <li><a href="../salzburg.html">Salzburg</a></li>
+                            <li><a href="../steiermark.html">Steiermark</a></li>
                             <li><a href="../tirol.html">Tirol</a></li>
-                            <li><a href="#">Vorarlberg</a></li>
-                            <li><a href="#">Wien</a></li>
+                            <li><a href="../vorarlberg.html">Vorarlberg</a></li>
+                            <li><a href="../wien.html">Wien</a></li>
                         </ul>
                     </li>
-                    <li><a id="sos" href="#">Szolgáltatók | Vorarlberg</a>
+                    <li><a id="sos" href="#">Szolgáltatók | Wien</a>
                         <ul class="sos-list">
                         <li><a href="autoszerelo.html">Autószerelők | Autómentők</a></li>
                         <li><a href="fuvarozo.html">Háztól Házig fuvarozás | Költöztetés</a></li>
@@ -81,7 +81,7 @@
                         <li><a href="orvosok.html">Orvosok</a></li>
                     </ul>
                     </li>
-                    <li><a href="../actual_jobs-steiermark.html">Aktuális Munkák | Vorarlberg</a></li>
+                    <li><a href="../actual_jobst_wien.html">Aktuális Munkák | Wien</a></li>
                     <li><a href="../kapcsolat.html">Kapcsolat</a></li>
                 </ul>
             </nav>
