--- a/actual_jobs-tirol.html
+++ b/actual_jobs-tirol.html
@@ -81,7 +81,7 @@
                             <li><a href="szolgaltatok_tirol/orvosok.html">Orvosok</a></li>
                     </ul>
                     </li>
-                    <li><a href="actual_jobs-tirol.html">Aktuális Munkák</a></li>
+                    <li><a href="actual_jobs-tirol.html">Aktuális Munkák | Tirol</a></li>
                     <li><a href="kapcsolat.html">Kapcsolat</a></li>
                 </ul>
             </nav>
