--- a/kapcsolat.html
+++ b/kapcsolat.html
@@ -90,11 +90,11 @@
                     Please because of <em>advertising</em>, or because of any other questions, do not hesitate to contact us : info@magyarokausztriaban.at
                </p>
 
-            <aside id="social-media">
+           <!-- <aside id="social-media">
                 <a href="#"><i class="fab fa-2x fa-facebook-square"></i></a>
                 <a href="#"><i class="fab fa-2x fa-instagram"></i></i></a>
                 <a href="#"><i class="fab fa-2x fa-twitter-square"></i></i></a>
-            </aside>
+            </aside>-->
             <footer>
                 <div id="contact-box">
                     <a href="javascript:history.back()"><div class="house-icon"><i class="fas fa-2x fa-undo"></i></div></a>
