--- a/munka.html
+++ b/munka.html
@@ -95,6 +95,12 @@
                <a href="https://www.stepstone.at/"><p  class="first-p">
                 www.stepstone.at
            </p></a>
+           <a href="https://www.hogastjob.com/"><p  class="first-p">
+            www.hogastjob.com
+       </p></a>
+       <a href="https://www.karriere.at/"><p  class="first-p">
+        www.karierre.at
+   </p></a>
                <p class="second-p" id="last-p-jobs">
                  Kérjük, ha tartományokra lebontva szeretne munkát keresni,
                   kattintson a "Tartományok" menü pontra és válassza ki a listából az Önnek megfelelőt.
