--- a/niederosterreich.html
+++ b/niederosterreich.html
@@ -52,7 +52,7 @@
                         <div id="line-three" class="hamburger-line"></div>
                     </div>
                 </div>
-                <h2 id="aktiv-page-name" style="grid-column: 3/4;">Niederösterreich</h2>
+                <h2 id="aktiv-page-name" id="long-name">Niederösterreich</h2>
             </div>
                 <ul id="menu-list" class="menu-list-visibility">
                     <li><a href="index.html">Főoldal</a></li>
