--- a/oberosterreich.html
+++ b/oberosterreich.html
@@ -52,7 +52,7 @@
                         <div id="line-three" class="hamburger-line"></div>
                     </div>
                 </div>
-                <h2 id="aktiv-page-name" style="grid-column: 3/4;">Oberösterreich</h2>
+                <h2 id="aktiv-page-name">Oberösterreich</h2>
             </div>
                 <ul id="menu-list" class="menu-list-visibility">
                     <li><a href="index.html">Főoldal</a></li>
